SFWEB-19 Fix top overflow bug.

--- a/src/app/base/base.component.scss
+++ b/src/app/base/base.component.scss
@@ -1,10 +1,8 @@
 @import '~@angular/material/theming';
 @import '../../sass/variables';
 
-$content-margin: 20px;
-
 .content {
-  margin-top: $toolbar-height + $content-margin;
+  margin-top: $toolbar-height;
   margin-left: $left-sidebar-width + $content-margin;
 
   @media screen and ($mat-xsmall) {
