--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -18,3 +18,5 @@ $left-sidebar-width: 75px;
 $sf-typography: mat-typography-config(
         $font-family: 'Noto Sans'
 );
+
+$content-margin: 20px;
